@@ -40,45 +40,63 @@
 #define SCRUB_MAGIC "\001\002\003SCRUBBED!"
 
 void
-writesig(char *path)
+writesig(char *path, size_t blocksize)
 {
-    uint8_t buf[sizeof(SCRUB_MAGIC)];
+    uint8_t *buf = malloc(blocksize);
     int fd, n;
 
+    if (!buf) {
+        fprintf(stderr, "out of memory\n");
+        exit(1);
+    }
     fd = open(path, O_RDWR);
     if (fd < 0) {
         perror(path);
         fprintf(stderr, "error opening file to write signature\n");
         exit(1);
     }
-    memcpy(buf, SCRUB_MAGIC, sizeof(buf));
-    n = write_all(fd, buf, sizeof(buf));
+    memcpy(buf, SCRUB_MAGIC, sizeof(SCRUB_MAGIC));
+    /* AIX requires that we write even multiples of blocksize for raw 
+     * devices, else EINVAL.
+     */
+    n = write_all(fd, buf, blocksize);
     if (n < 0) {
         perror(path);
         fprintf(stderr, "error writing signature to file\n");
         exit(1);
     }
-    /* ignore short write */
+    /* Ignore short write.  
+     * We'll fail to read the signature next time - not the end of the world.
+     */
     if (close(fd) < 0) {
         perror(path);
         fprintf(stderr, "error closing file after signature write\n");
         exit(1);
     }
+    free(buf);
 }
 
 int
-checksig(char *path)
+checksig(char *path, size_t blocksize)
 {
-    uint8_t buf[sizeof(SCRUB_MAGIC)];
+    uint8_t *buf = malloc(blocksize);
     int fd, n;
+    int result = 0;
 
+    if (!buf) {
+        fprintf(stderr, "out of memory\n");
+        exit(1);
+    }
     fd = open(path, O_RDONLY);
     if (fd < 0) {
         perror(path);
         fprintf(stderr, "error opening file to read signature\n");
         exit(1);
     }
-    n = read_all(fd, buf, sizeof(buf));
+    /* AIX requires that we read even multiples of blocksize for raw
+     * devices, else EINVAL.
+     */
+    n = read_all(fd, buf, blocksize);
     if (n < 0) {
         perror(path);
         fprintf(stderr, "error reading signature from file\n");
@@ -89,10 +107,14 @@ checksig(char *path)
         fprintf(stderr, "error closing file after signature read\n");
         exit(1);
     }
-    /* short read = no sig */
-    if (n == sizeof(buf) && memcmp(buf, SCRUB_MAGIC, sizeof(buf)) == 0)
-        return 1;
-    return 0;
+    /* Treat a short read like "no signature".  Not the end of the world.
+     */
+    if (n >= strlen(SCRUB_MAGIC)) {
+        if (memcmp(buf, SCRUB_MAGIC, strlen(SCRUB_MAGIC)) == 0)
+            result = 1;
+    }
+    free(buf);
+    return result;
 }
 
 #ifdef STAND
@@ -102,9 +124,9 @@ int main(int argc, char *argv[])
         fprintf(stderr, "Usage: sig filename\n");
         exit(1);
     }
-    if (!checksig(argv[1])) {
+    if (!checksig(argv[1]),8192) {
         fprintf(stderr, "no signature, writing one\n");
-        writesig(argv[1]);
+        writesig(argv[1],8192);
     } else {
         fprintf(stderr, "signature present\n");
     }
